tests/baselines/reference/typeOfOperator1.errors.txt
typeOfOperator1.ts(3,5): error TS2322: Type 'string' is not assignable to type 'number'.
  Type 'string' is not assignable to type 'number'.


==== typeOfOperator1.ts (1 errors) ====
    var x = 1;
    var y: string = typeof x;
    var z: number = typeof x;
        ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.